--- a/index.html
+++ b/index.html
@@ -166,4 +166,7 @@
         </span>
     </footer>
 </body>
+<footer style="font-size: 10px;">
+    <a href="https://www.flaticon.com/br/icones-gratis/profissoes-e-empregos" title="profissões e empregos ícones">Profissões e empregos ícones criados por Freepik - Flaticon</a>
+</footer>
 </html>
