--- a/index.html
+++ b/index.html
@@ -167,6 +167,6 @@
     </footer>
 </body>
 <footer style="font-size: 10px;">
-    <a href="https://www.flaticon.com/br/icones-gratis/profissoes-e-empregos" title="profissões e empregos ícones">Profissões e empregos ícones criados por Freepik - Flaticon</a>
+   <a href="https://www.flaticon.com/br/icones-gratis/carteira" title="carteira ícones">Carteira ícones criados por Freepik - Flaticon</a>
 </footer>
 </html>
