--- a/index.html
+++ b/index.html
@@ -164,9 +164,12 @@
         <span>
             &copy; Felipe Francisco, 2024 - Todos os direitos reservados.
         </span>
+        <div style="font-size: 10px; text-align: right;">
+            <a href="https://www.flaticon.com/br/icones-gratis/carteira" title="carteira ícones">Carteira ícones criados por Freepik - Flaticon</a>
+        </div>
     </footer>
 </body>
 <footer style="font-size: 10px;">
-   <a href="https://www.flaticon.com/br/icones-gratis/carteira" title="carteira ícones">Carteira ícones criados por Freepik - Flaticon</a>
+   
 </footer>
 </html>
