--- a/index.html
+++ b/index.html
@@ -162,11 +162,9 @@
 
     <footer>
         <span>
-            &copy; Felipe Francisco, 2024 - Todos os direitos reservados.
+            &copy; Felipe Francisco, 2024 - Todos os direitos reservados. <br>
+            <a style="font-size: 10px; text-align: right; font-color: #fff" href="https://www.flaticon.com/br/icones-gratis/carteira" title="carteira ícones">Carteira ícones criados por Freepik - Flaticon</a>
         </span>
-        <div style="font-size: 10px; text-align: right;">
-            <a href="https://www.flaticon.com/br/icones-gratis/carteira" title="carteira ícones">Carteira ícones criados por Freepik - Flaticon</a>
-        </div>
     </footer>
 </body>
 </html>
