--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <footer>
         <span>
             &copy; Felipe Francisco, 2024 - Todos os direitos reservados. <br>
-            <a style="font-size: 10px; text-align: right; font-color: #fff" href="https://www.flaticon.com/br/icones-gratis/carteira" title="carteira ícones">Carteira ícones criados por Freepik - Flaticon</a>
+            <a style="font-size: 10px; text-align: right; color: #fff" href="https://www.flaticon.com/br/icones-gratis/carteira" title="carteira ícones">Carteira ícones criados por Freepik - Flaticon</a>
         </span>
     </footer>
 </body>
