--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                         <a href="https://fefagundes-15.github.io/metro-cptm-sp/" target="_blank"><h3>Status Metrô e CPTM SP</h3></a>
                     </div>
                     <p>Monitoring the current status of the subway and CPTM lines in the state of São Paulo, Brazil</p>
+
+                    <div class="card-projects">
+                        <a href="https://fefagundes-15.github.io/Currency-converter/" target="_blank"><h3>Currency converter</h3></a>
+                    </div>
+                    <p>A project where you can convert a value in brazilian real to dollar and euro.</p>
                 </div>
             </aside>
             <aside class="skills">
